test/good/11_0_spectest.fsf
type nat = Zero | Succ(n:nat)
