test/bad/21_4_spectest_bad.fsf
type bad5 = Bad5 | Bad5(n:nat)
